[metadata]
name = nest-analysis
version = 1.0.2
description = NeST method for identifying nested structure in spatial transcriptomic data

[options]
packages = find:
install_requires =
    scanpy==1.8.2
    squidpy
    matplotlib<3.7
    seaborn
    pandas
    scikit-learn
    python-igraph
    numpy
    scipy
    leidenalg
    mygene
    anndata
    statsmodels
    shapely